# UnityInfoMCP

./: .env.example  .gitignore  README.md  README_KO.md  pyproject.toml
.github/workflows/: release.yml
UnityInfoBridge/: UnityInfoBridge.sln  build.ps1
UnityInfoBridge/src/: BepInExEntryPoint.cs  BridgeRuntime.cs  InspectionService.Core.cs  InspectionService.Helpers.cs  MelonLoaderEntryPoint.cs  PluginMetadata.cs  UnityInfoBridge.csproj
UnityInfoMCP/: __main__.py  bridge_client.py  config.py  errors.py  server.py
docs/: bridge-protocol.md  tool-catalog.md
