[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unity-info-mcp"
description = "Standalone MCP server for Unity runtime inspection (modding/localization workflows)."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "mcp>=1.27.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
build = [
  "build>=1.2.0",
  "mcp[cli]>=1.27.0",
  "pyinstaller>=6.0",
]

[project.scripts]
unity-info-mcp = "UnityInfoMCP.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["UnityInfoMCP*"]

[tool.setuptools.dynamic]
version = {file = ["version.txt"]}
